--- a/Agro-admin/package.json
+++ b/Agro-admin/package.json
@@ -61,5 +61,11 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
+  },
+  "overrides": {
+    "@material-ui/core": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
