--- a/Agro-admin/package.json
+++ b/Agro-admin/package.json
@@ -37,7 +37,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.61.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+	"ajv":"^6.12.6"
   },
   "scripts": {
     "start": "react-scripts start",
