--- a/Agro-admin/package.json
+++ b/Agro-admin/package.json
@@ -2,9 +2,9 @@
   "name": "react-admin",
   "version": "0.2.3",
   "private": true,
-  "engines":{
-	  "node":"16.x",
-	  "npm":"8.x"
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
   },
   "appSettings :": {
     "baseUrl": "http://localhost:3001",
@@ -38,7 +38,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.61.0",
     "web-vitals": "^2.1.4",
-	"ajv":"^6.12.6"
+    "ajv": "^6.12.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,6 +65,8 @@
     ]
   },
   "devDependencies": {
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "tailwindcss": "^3.3.1"
   },
   "overrides": {
