--- a/Agro-mobile/eas.json
+++ b/Agro-mobile/eas.json
@@ -1,12 +1,14 @@
 {
   "cli": {
-    "version": ">= 5.6.0"
+    "version": ">= 5.6.0",
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
       "node": "20.19.4",
+      "prebuildCommand": "npx expo prebuild --clean",
       "android": {
         "buildType": "apk"
       },
@@ -18,19 +20,24 @@
     "preview": {
       "distribution": "internal",
       "node": "20.19.4",
+      "prebuildCommand": "npx expo prebuild --clean",
       "ios": {
         "resourceClass": "m1-medium"
       }
     },
     "production": {
       "node": "20.19.4",
+      "prebuildCommand": "npx expo prebuild --clean",
       "android": {
         "buildType": "apk"
       },
       "ios": {
         "resourceClass": "m-medium"
       },
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_USE_APPLE_DEVICE_SUPPORT": "1"
+      }
     }
   },
   "submit": {
