--- a/Agro-mobile/package.json
+++ b/Agro-mobile/package.json
@@ -27,24 +27,24 @@
     "@react-navigation/stack": "^7.4.8",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "@sentry/react-native": "~6.20.0",
+    "@sentry/react-native": "~7.1.0",
     "axios": "^1.3.4",
-    "expo": "~54.0.0",
+    "expo": "54.0.12",
     "expo-application": "~7.0.7",
     "expo-auth-session": "~7.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
-    "expo-dev-client": "^6.0.12",
-    "expo-device": "~8.0.8",
+    "expo-dev-client": "~6.0.13",
+    "expo-device": "~8.0.9",
     "expo-linear-gradient": "~15.0.7",
-    "expo-notifications": "~0.32.11",
+    "expo-notifications": "~0.32.12",
     "expo-random": "~14.0.1",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.11",
-    "expo-web-browser": "~15.0.7",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "graphql": "^16.8.1",
     "moment": "^2.29.4",
     "react": "19.1.0",
@@ -56,7 +56,7 @@
     "react-native-md5": "^1.0.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-purchases": "^9.4.3",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "^0.5.1",
@@ -70,6 +70,8 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "@expo/prebuild-config": "^8.2.0",
+    "expo-modules-autolinking": "^1.11.3"
   }
 }
