--- a/Agro-backend/package.json
+++ b/Agro-backend/package.json
@@ -23,7 +23,8 @@
     "mongodb": "4.1",
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
