--- a/Agro-mobile/package.json
+++ b/Agro-mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agrowise",
-  "version": "1.0.7",
+  "version": "1.0.81",
   "private": true,
   "scripts": {
     "start": "expo start",
@@ -60,6 +60,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "^0.5.1",
+    "socket.io-client": "^4.7.2",
     "typescript": "~5.9.2"
   },
   "expo": {
