--- a/Agro-mobile/app.json
+++ b/Agro-mobile/app.json
@@ -68,11 +68,11 @@
                 "path": "../node_modules/@react-native-firebase/app/ios/RNFBApp-Core-Includes.podspec"
               },
               {
-                "podName": "React-Core",
+                "name": "React-Core",
                 "podConfiguration": "modular_headers: true"
               },
               {
-                "podName": "React-cxxreact",
+                "name": "React-cxxreact",
                 "podConfiguration": "modular_headers: true"
               }
             ]
